# Thor

./: .clang-format  .gitignore  .style.yapf  AlexnetExample.cpp  CMakeLists.txt  CONTRIBUTING.md  DevSetup.txt  Makefile  README.md  TODO.md  ThorVersion.h.in  formatAll  makefile  requirements.txt
bindings/python/: CMakeLists.txt  README.md  pyproject.toml
bindings/python/build_backend/: thor_build_backend.py
bindings/python/build_backend/thor_build/: __init__.py  cuda_stack.py  dynamic_metadata.py
bindings/python/src/: module.cpp
bindings/python/src/core/: ParameterSpecification.cpp  activations.cpp  binding_types.h  cast.h  ensemble_runtime.cpp  layers.cpp  losses.cpp  metrics.cpp  module.cpp  network.cpp  optimizers.cpp  parameter.cpp  placed_network.cpp  tensor.cpp  version.cpp
bindings/python/src/core/activations/: activations.cpp  bilinear_glu.cpp  elu.cpp  exponential.cpp  geglu.cpp  gelu.cpp  glu.cpp  hard_sigmoid.cpp  hard_swish.cpp  hard_tanh.cpp  mish.cpp  reglu.cpp  relu.cpp  relu6.cpp  selu.cpp  sigmoid.cpp  soft_plus.cpp  soft_sign.cpp  softmax.cpp  swiglu.cpp  swish.cpp  tanh.cpp  threshold.cpp
bindings/python/src/core/initializers/: glorot.cpp  initializers.cpp  uniform_random.cpp
bindings/python/src/core/layers/: adaptive_layer_norm.cpp  attention.cpp  batch_normalization.cpp  concatenate.cpp  convolution_2d.cpp  convolution_3d.cpp  custom_layer.cpp  drop_out.cpp  embedding.cpp  finite_check.cpp  flatten.cpp  fully_connected.cpp  instance_norm.cpp  layer_norm.cpp  layers.cpp  network_input.cpp  network_output.cpp  pooling.cpp  reshape.cpp  rms_norm.cpp  scaled_dot_product_attention.cpp  slice.cpp  stop_gradient.cpp  stub.cpp  transpose.cpp  type_converter.cpp
bindings/python/src/core/losses/: asymmetric_power_loss.cpp  binary_cross_entropy.cpp  binary_focal_loss.cpp  box_iou_losses.cpp  categorical_cross_entropy.cpp  categorical_focal_loss.cpp  contrastive_loss.cpp  cosine_embedding_loss.cpp  ctc_loss.cpp  custom_loss.cpp  dice_loss.cpp  expectile_loss.cpp  focal_tversky_loss.cpp  gamma_tweedie_losses.cpp  gaussian_nll_loss.cpp  hinge_gan_discriminator_loss.cpp  hinge_gan_generator_loss.cpp  huber_loss.cpp  info_nce_loss.cpp  kl_div_loss.cpp  list_net_loss.cpp  listwise_softmax_cross_entropy_loss.cpp  losses.cpp  lsgan_losses.cpp  margin_ranking_loss.cpp  mean_absolute_error.cpp  mean_absolute_percentage_error.cpp  mean_power_error.cpp  mean_squared_error.cpp  poisson_nll_loss.cpp  quantile_loss.cpp  regression_loss_dtype.h  smooth_l1_loss.cpp  soft_target_cross_entropy.cpp  triplet_loss.cpp  tversky_loss.cpp  wasserstein_gan_losses.cpp
bindings/python/src/core/metrics/: binary_accuracy.cpp  categorical_accuracy.cpp  custom_metric.cpp  loss_metric.cpp  metrics.cpp  reduction_metrics.cpp
bindings/python/src/core/optimizers/: adadelta.cpp  adafactor.cpp  adagrad.cpp  adam.cpp  adamax.cpp  adamw.cpp  asgd.cpp  lamb.cpp  lars.cpp  muon.cpp  nadam.cpp  optimizers.cpp  radam.cpp  rmsprop.cpp  sgd.cpp
bindings/python/src/core/physical/: NanobindDTypes.h  NumpyDTypeMapping.h  event.cpp  expression.cpp  machine_evaluator.cpp  physical.cpp  physical_tensor.cpp  scoped_gpu.cpp  stream.cpp
bindings/python/src/core/random/: full_period_random.cpp  random.cpp
bindings/python/src/core/training/: NumpyDataset.cpp  NumpyDataset.h  training.cpp
bindings/python/src/thor/: __init__.py  _bootstrap.py  _cuda_stack.py  _cuda_stack_resolved.py  _nvrtc_headers.py
bindings/python/src/thor/activations/: __init__.py
bindings/python/src/thor/constraints/: __init__.py
bindings/python/src/thor/data/: __init__.py  _split.py
bindings/python/src/thor/ensembles/: __init__.py  _manifest.py
bindings/python/src/thor/initializers/: __init__.py
bindings/python/src/thor/layers/: __init__.py
bindings/python/src/thor/losses/: __init__.py
bindings/python/src/thor/metrics/: __init__.py
bindings/python/src/thor/optimizers/: __init__.py
bindings/python/src/thor/parameters/: __init__.py
bindings/python/src/thor/physical/: __init__.py  numpy_dtypes.py
bindings/python/src/thor/random/: __init__.py
bindings/python/src/thor/runtime/: __init__.py
bindings/python/src/thor/training/: __init__.py  _kfold.py
bindings/python/test/: conftest.py
bindings/python/test/core/: smoke_test.py  test_cuda_bootstrap.py  test_cuda_stack_cmake_resolver.py  test_ensemble_model_manifest.py  test_network.py  test_parameter.py  test_placed_network.py  test_public_api_shape.py  test_tensor.py
bindings/python/test/core/activations/: test_elu.py  test_exponential.py  test_gelu.py  test_hard_sigmoid.py  test_new_activations.py  test_relu.py  test_selu.py  test_sigmoid.py  test_soft_plus.py  test_soft_sign.py  test_softmax.py  test_swish.py  test_tanh.py
bindings/python/test/core/data/: test_numpy_dataset.py  test_stratified_splitter.py
bindings/python/test/core/initializers/: test_glorot.py  test_uniform_random.py
bindings/python/test/core/layers/: test_adaptive_layer_norm.py  test_attention.py  test_batch_normalization.py  test_concatenate.py  test_convolution_2d.py  test_convolution_3d.py  test_custom_layer.py  test_drop_out.py  test_finite_check.py  test_flatten.py  test_freeze_training.py  test_fully_connected.py  test_instance_norm.py  test_layer_norm.py  test_network_input.py  test_network_output.py  test_pooling.py  test_reshape.py  test_rms_norm.py  test_scaled_dot_product_attention.py  test_slice.py  test_stop_gradient.py  test_stub.py  test_transpose.py  test_type_converter.py
bindings/python/test/core/losses/: test_asymmetric_power_loss.py  test_binary_cross_entropy.py  test_binary_focal_loss.py  test_box_iou_losses.py  test_categorical_cross_entropy.py  test_categorical_focal_loss.py  test_contrastive_loss.py  test_cosine_embedding_loss.py  test_ctc_loss.py  test_dice_loss.py  test_domain_loss_api_symmetry.py  test_expectile_loss.py  test_focal_tversky_loss.py  test_gamma_tweedie_losses.py  test_gaussian_nll_loss.py  test_hinge_gan_losses.py  test_huber_loss.py  (+19 more)
bindings/python/thor/: __init__.py
bindings/python/tools/: resolve_cuda_stack_for_cmake.py
(+1410 files in other folders)
